# libcart

./: Cargo.toml
crypto/: Cargo.toml
crypto/src/: aead.rs  errors.rs  keys.rs  lib.rs
server/: Cargo.toml
server/src/: client.rs  errors.rs  lib.rs  message_types.rs  proto.rs  service.rs
server/src/codec/: decoder.rs  encoder.rs  frame_utils.rs  mod.rs
server/src/proto/: client.rs  mod.rs  server.rs
src/: lib.rs
