[package]
name = "server"
version = "0.1.0"
authors = ["Josh Lindsey <Joshua.Lindsey@georgetown.edu>"]

[dependencies]
crypto = { path = "../crypto" }
log = "0.3"
bytes = "0.4"
byteorder = "1.0.0"
uuid = { version = "0.4", features = ["serde", "v4"] }
futures = "0.1"
ring = "0.11.0"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_cbor = "0.6.0"